Update Reflected XSS into HTML context with most tags and attributes blocked.html
Update the instructions.

--- a/xss/local_tests/Reflected XSS into HTML context with most tags and attributes blocked.html
+++ b/xss/local_tests/Reflected XSS into HTML context with most tags and attributes blocked.html
@@ -1,6 +1,6 @@
-Put on the lab. Change the domain.
+Remenber to change the domain.
 
-1. Use the OWASP PRoxy Fuzzy feature to find which tag the waf  allows you to use at the  search parameter.
+1. Use the OWASP PRoxy Fuzzy feature (if you dont have BurpPro like me) or Burp Pro Intruder tab to find which tag the waf  allows you to use at the  search parameter.
 1.1 You can use the tags that portswigger  suggests https://portswigger.net/web-security/cross-site-scripting/cheat-sheet
 
 2. Insert at the exploit server the content
